--- a/4-logistic-regression.ipynb
+++ b/4-logistic-regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c8551d8e",
    "metadata": {},
    "outputs": [
@@ -16,16 +16,7 @@
    ],
    "source": [
     "from sklearnex import patch_sklearn\n",
-    "patch_sklearn()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "87b5f523",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "patch_sklearn()\n",
     "import polars as pl\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -36,185 +27,71 @@
     "import numpy as np\n",
     "import joblib\n",
     "from plotly.graph_objs._figure import Figure\n",
-    "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "import re\n",
-    "import gc\n",
-    "from scipy.sparse import save_npz, load_npz\n",
-    "from sklearn.feature_extraction.text import HashingVectorizer\n",
-    "\n",
-    "# 1. Download & grab the NLTK stop‐word list once\n",
-    "# nltk.download(\"stopwords\")\n",
-    "# STOP_WORDS = set(stopwords.words(\"english\"))\n",
-    "# STOP_WORDS.add(\"amazon\")\n",
-    "# STOP_WORDS.add(\"Amazon\")\n",
-    "# STOP_WORDS.add(\"review\")"
+    "import gc   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "3ca5e580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query: pl.Expr = (pl.col(\"rating\") > 3).cast(pl.Int8).alias(\"rating\")\n",
+    "\n",
+    "lf: pl.LazyFrame = pl.scan_parquet(\"data/processed/amazon-2023.parquet\")\n",
+    "lf = lf.select([\"rating\", \"text\"])\n",
+    "df: pl.DataFrame = lf.with_columns(query).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "59992b88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stop_pattern = r\"\\b(\" + \"|\".join(map(re.escape, STOP_WORDS)) + r\")\\b\"\n",
+    "X: pl.Series = df[\"text\"]\n",
+    "y: pl.Series = df[\"rating\"]\n",
     "\n",
-    "# lf: pl.LazyFrame = (\n",
-    "#     pl.scan_parquet(\"data/processed/amazon-2023.parquet\")\n",
-    "#       .select([\n",
-    "#           pl.col(\"rating\").cast(pl.Int8),\n",
-    "#           pl.col(\"text\").cast(pl.Utf8)\n",
-    "#       ])\n",
-    "#       .with_columns((pl.col(\"rating\") > 3).cast(pl.Int8).alias(\"rating\"))\n",
-    "#       .with_columns(\n",
-    "#           pl.col(\"text\")\n",
-    "#             .str.replace_all(stop_pattern, \"\", literal=False)\n",
-    "#             .str.replace_all(r\"\\s+\", \" \", literal=False)  # collapse any gaps left\n",
-    "#             .str.strip_chars()\n",
-    "#             .alias(\"text\")\n",
-    "#       )\n",
-    "#       .with_columns(\n",
-    "#           pl.col(\"text\")\n",
-    "#             .str.replace_all(r\"http\\S+|www\\.\\S+\", \"\", literal=False)\n",
-    "#             .str.replace_all(r\"[^\\w\\s]\", \"\", literal=False)\n",
-    "#             .str.replace_all(r\"\\s+\", \" \", literal=False)\n",
-    "#             .str.to_lowercase()\n",
-    "#             .str.strip_chars()\n",
-    "#             .str.slice(0, 128)\n",
-    "#             .alias(\"text\")\n",
-    "#       )\n",
-    "#       .filter(pl.col(\"text\").str.len_chars() > 10)\n",
-    "# )\n",
-    "\n",
-    "# lf.sink_parquet(\"data/processed/training.parquet\", engine=\"streaming\")"
+    "del df\n",
+    "gc.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "61c09e16",
+   "execution_count": null,
+   "id": "81a1d351",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df=pl.read_parquet(\"data/processed/training.parquet\", low_memory=True, memory_map=True, use_pyarrow=True)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, shuffle=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c8fe5a59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X:pl.Series = df[\"text\"]\n",
-    "# y: pl.Series = df[\"rating\"]\n",
-    "\n",
-    "# del df\n",
-    "# gc.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a88cbbda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X_train, X_test, y_train, y_test = train_test_split(\n",
-    "#     X, y, test_size=0.2, random_state=42, shuffle=True\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "00a46ee7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pl.DataFrame({\"rating\": y_train}).write_parquet(\"data/processed/y_train.parquet\")\n",
-    "# del y_train\n",
-    "# gc.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "7b54685e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train = pl.scan_parquet(\"data/processed/y_train.parquet\", low_memory=True).head(1_000_000).select(\"rating\").collect()[\"rating\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "b2e90e4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train = pl.scan_parquet(\"data/processed/X_train.parquet\",low_memory=True).head(1_000_000).select(\"text\").collect()[\"text\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "467570f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test =pl.scan_parquet(\"data/processed/X_test.parquet\",low_memory=True).select(\"text\").collect()[\"text\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "1b7f7a8b",
+   "execution_count": null,
+   "id": "a99dd218",
    "metadata": {},
    "outputs": [],
    "source": [
     "vectorizer = TfidfVectorizer(\n",
-    "    # max_features=1,\n",
-    "    lowercase=False,\n",
+    "    lowercase=True,\n",
     "    token_pattern=r'\\b\\w+\\b', \n",
     "    min_df=5,\n",
-    "    max_df=0.8\n",
+    "    max_df=0.8,\n",
+    "    stop_words=\"english\"\n",
     ")\n",
     "\n",
-    "# X_train = pl.read_parquet(\"data/processed/X_train.parquet\",low_memory=True, memory_map=True, use_pyarrow=True)[\"text\"]\n",
-    "X_train: spmatrix = vectorizer.fit_transform(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "4efdf97d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "X_train: spmatrix = vectorizer.fit_transform(X_train)\n",
     "X_test: spmatrix = vectorizer.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "6d9b681a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_npz('X_test.npz', X_test)\n",
-    "save_npz('X_train.npz', X_train)\n",
-    "\n",
-    "# # Reload later\n",
-    "# X_train = load_npz('X_train.npz')\n",
-    "# X_test = load_npz('X_test.npz')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "418ac97f",
    "metadata": {},
    "outputs": [
@@ -662,7 +539,7 @@
     }
    ],
    "source": [
-    "model = LogisticRegression() \n",
+    "model = LogisticRegression(max_iter=100) # iter added to stop warning, although this won't be re-ran\n",
     "model.fit(X_train, y_train)"
    ]
   },
@@ -692,47 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "8ca6e2c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# joblib.dump(X_test, \"X_test.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "edd2b2f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = joblib.load(\"data/logreg_tfidf.pkl\")\n",
-    "# X_test = joblib.load(\"X_test.pkl\")\n",
-    "X_test = load_npz('X_test.npz')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "132efe5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X_test = pl.read_parquet(\"data/processed/X_test.parquet\",low_memory=True, memory_map=True, use_pyarrow=True)[\"rating\"].head(1_000_000)\n",
-    "y_test = pl.scan_parquet(\"data/processed/y_test.parquet\",low_memory=True).collect()[\"rating\"]\n",
-    "#\n",
-    "y_pred: np.ndarray = model.predict(X_test)\n",
-    "metrics: dict = get_metrics(y_test, y_pred, \"Logistic Regression\")\n",
-    "\n",
-    "\n",
-    "# # F1= 0.919511\n",
-    "# # F1= 0.931996\t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "8f806649",
    "metadata": {},
    "outputs": [
@@ -767,7 +604,10 @@
     }
    ],
    "source": [
-    "result = pl.DataFrame([metrics])\n",
+    "y_pred: np.ndarray = model.predict(X_test)\n",
+    "metrics: dict = get_metrics(y_test, y_pred, \"Logistic Regression\")\n",
+    "\n",
+    "result: pl.DataFrame = pl.DataFrame([metrics])\n",
     "result"
    ]
   },
