--- a/5-als-system.ipynb
+++ b/5-als-system.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearnex import patch_sklearn\n",
+    "patch_sklearn()\n",
     "import polars as pl\n",
     "import numpy as np\n",
     "import implicit\n",
