--- a/4-logistic-regression.ipynb
+++ b/4-logistic-regression.ipynb
@@ -31,6 +31,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40bca61a",
+   "metadata": {},
+   "source": [
+    "Binarize ratings into positive (rating > 3) and negative classes, lazily scanning the Parquet file and selecting only `rating` and `text` to minimize memory usage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3ca5e580",
@@ -59,6 +67,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "931bc285",
+   "metadata": {},
+   "source": [
+    "After splitting the data, delete unused variables and invoke the garbage collector to free up RAM before training."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "81a1d351",
@@ -67,7 +83,19 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42, shuffle=True\n",
-    ")"
+    ")\n",
+    "\n",
+    "del X\n",
+    "del y\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7725a29",
+   "metadata": {},
+   "source": [
+    "Initialize a `TfidfVectorizer` with basic tokenization, document-frequency thresholds, and English stop words; fit it on `X_train` and transform both train and test sets."
    ]
   },
   {
@@ -544,6 +572,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a586432f",
+   "metadata": {},
+   "source": [
+    "Serialize the trained `LogisticRegression` model to disk with `joblib.dump` so it can be reloaded later without retraining."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "6c86dc70",
@@ -565,6 +601,14 @@
     "del X_train\n",
     "del y_train\n",
     "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64307e3c",
+   "metadata": {},
+   "source": [
+    "This run achieved an F1 score of 92.27%; the attached confusion matrix evaluates true/false positives and negatives on the test set. F1 scores may mildly differ due to shuffling and randomization"
    ]
   },
   {
@@ -1508,6 +1552,15 @@
    "source": [
     "fig: Figure = plot_confusion_matrix(result)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcb57e30",
+   "metadata": {},
+   "source": [
+    "The logistic regression model correctly predicted a large number of both positive (69.49 million) and negative (13.43 million) instances, while misclassifying fewer instances (3.47 million false positives and 7.96 million false negatives). \n",
+    "Coupled with a 92% F1 score, this indicates a strong overall performance with a good balance between precision and recall."
    ]
   }
  ],
