--- a/2-data-cleaning.ipynb
+++ b/2-data-cleaning.ipynb
@@ -13,6 +13,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f124801",
+   "metadata": {},
+   "source": [
+    "`extract_brand()` returns a Polars expression that creates a brand column which holds either the value from store after stripping white spaces or the value from the \"details\" column after removing the 'Brand:'\n",
+    "\n",
+    "`process_category()` loads the meta and review Parquet files into LazyFrames and joins them on parent_asin. It filters rows with valid ratings and non-empty text, adds the brand column using extract_brand(), removes duplicates, and adds a \"year\" column extracted from the timestamp. The cleaned LazyFrame is then saved as a Parquet file in the intermediate folder."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "96733738",
@@ -50,6 +60,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "05f187fa",
+   "metadata": {},
+   "source": [
+    "process and clean each parquet using the functions above and runs grabage collections freeing up RAM."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f5053c40",
@@ -60,6 +78,14 @@
     "    print(f\"Cleaning dataset for {category}...\")\n",
     "    process_category(category)\n",
     "    gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4434f33",
+   "metadata": {},
+   "source": [
+    "after cleaning each parquet in `ALL_CATEGORIES` the parquets are then loaded into a lazy frame, merged into a singular parquet and saved in the processed folder."
    ]
   },
   {
