--- a/2-data-cleaning.ipynb
+++ b/2-data-cleaning.ipynb
@@ -64,7 +64,7 @@
    "id": "05f187fa",
    "metadata": {},
    "source": [
-    "process and clean each parquet using the functions above and runs grabage collections freeing up RAM."
+    "Process and clean each parquet using the functions detailed above and uses grabage collections freeing up RAM on each iteration."
    ]
   },
   {
@@ -85,7 +85,7 @@
    "id": "e4434f33",
    "metadata": {},
    "source": [
-    "after cleaning each parquet in `ALL_CATEGORIES` the parquets are then loaded into a lazy frame, merged into a singular parquet and saved in the processed folder."
+    "After cleaning each category parquet in `ALL_CATEGORIES` the parquets are then loaded into a lazy frame, merged into a singular combined parquet and saved in the processed folder(Gold Layer)."
    ]
   },
   {
@@ -98,6 +98,14 @@
     "merged: pl.LazyFrame = pl.scan_parquet(f\"{INTERMEDIATE}/*.parquet\")\n",
     "merged = merged.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
     "merged.sink_parquet(\"data/processed/amazon-2023.parquet\", engine=\"streaming\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e58831c1",
+   "metadata": {},
+   "source": [
+    "Collated DataFrame was 502,984,947 rows."
    ]
   },
   {
